--- a/packages/couchbase-lite-capacitor/package.json
+++ b/packages/couchbase-lite-capacitor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@recouch/couchbase-lite-capacitor",
-  "version": "0.2.7-DEV.3",
+  "version": "0.2.7",
   "description": "Couchbase Lite bindings for iOS and Android via Capacitor",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
