--- a/packages/couchbase-lite-node/package.json
+++ b/packages/couchbase-lite-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@recouch/couchbase-lite-node",
-  "version": "0.2.7-DEV.3",
+  "version": "0.2.7",
   "description": "Couchbase Lite bindings for Node.js",
   "repository": {
     "type": "git",
